--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ts-node": "^10.7.0",
     "typeorm": "^0.3.0",
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1"
   }
 }
